2003-09-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::LoadHistoryLines): Mask off the alerts
	during history loading.

2003-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Speed up the appearance of history loading by doing
	all the work in idle events. Injects the history at a HISTORY mark
	so that the current messages are visible while the full history is
	still loading.

2003-08-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (::tkchat::doBug): simplify with URL that finds bug
	id regardless of project

2003-08-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fix a problem with the event bindings when not
	showing the online users pane. 
	* tkchat.tcl: Also in the saveRC function which prevented exiting.

2003-08-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed translation code to appear in a dialog.
	Added a context menu to access translation. 
	Support space separator in the /tip command.

2003-07-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Changed the pane resizing so that the chat window is
	given the new space and the users window remains constant size.

2003-07-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added paned window support for the Online users
	window.
	
	* tkchat.tcl: Use tk::PlaceWindow for dialog placement (+ fix to
	Tk this results in correct placement with multiple win32 desktops).

2003-07-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (addMessage): Fix for the Jabber bridge nick handling.

	* tkchat.tcl (gotoURL): Try to use DDE to open URLs (avoid quoting
	problems). Also copy the URL into the CLIPBOARD selection.

	* tkchat.tcl (::tkchat::userPost): Add a /google command to launch
	google queries with the remaining text.

	* tkchat.tcl (::tkchat::About): Added help text for the commands.

	* tkchat.tcl (::thchat::ShowSmilies): Add {} to expr body.
	